# PartSeg_bioimageio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/PartSeg_bioimageio/: __init__.py  _io.py  _settings.py  _widget.py  napari.yaml  partseg_widgets.py  segmentation_algorithm.py  train_util.py  zenodo.py
src/PartSeg_bioimageio/_tests/: conftest.py  test_io.py  test_widget.py
src/PartSeg_bioimageio_support/: __init__.py  _io.py  _widget.py  napari.yaml  segmentation_algorithm.py  zenodo.py
src/PartSeg_bioimageio_support/_tests/: conftest.py  test_io.py  test_widget.py
src/napari_bioimage/: __init__.py  _settings.py  _widget.py  model_load.py  napari.yaml
src/napari_bioimage/_tests/: test_io.py
src/napari_biomodel/: napari.yaml
src/napari_biomodel/_tests/: test_widget.py
tutorials/: eval_model.md  train_model.ipynb  train_model.md  train_model_server.md
