[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/PartSeg_bioimageio/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79


[tool.ruff]
line-length = 79
select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "C90", # mccabe
    "I", # isort
    "UP", # pyupgrade
    "A", # flake8-builtins
    "YTT", # flake8-2020
    "S", # flake8-bandit
    # "BLE", # flake8-blind-except
    "B", # lake8-bugbear
    "A", #flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PGH", # pygrep-hooks
    "PLC", "PLE", "PLR", "PLW", # pylint
    "RUF", # Ruff-specific rules
]
ignore = ["A003", "SIM108", "ARG002", "ARG003", "ARG004", "PLR2004",
    "PLR0913", # should be reenabled in future version
    "S603", "S607", "S101"
]
target-version = "py38"
fix = true
