[metadata]
name = PartSeg_bioimageio
description = Partseg and napari plugin to execute bioimageio models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/czaki/PartSeg_bioimageio
author = Grzegorz Bokota
author_email = g.bokota@uw.edu.pl
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/czaki/PartSeg_bioimageio/issues
    Documentation = https://github.com/czaki/PartSeg_bioimageio#README.md
    Source Code = https://github.com/czaki/PartSeg_bioimageio
    User Support = https://github.com/czaki/PartSeg_bioimageio/issues

[options]
packages = find:
install_requires =
    PartSeg
    PyYAML
    appdirs
    magicgui
    numpy
    pydantic
    qtpy
    requests
    scikit-image
    superqt
    tensorflow
    torch
    torchvision
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari_bioimage = PartSeg_bioimageio:napari.yaml
partseg.plugins =
    PartSeg_bioimageio = PartSeg_bioimageio

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml

[flake8]
ignore = E203,W503,C901
